# hot-sauce

./: Cargo.toml  README.MD
.github/workflows/: publish.yml  rust.yml
src/: lib.rs
tests/: multithread.rs
