[package]
name = "hot_sauce"
authors = ["4t145<u4t145@163.com>"]
repository = "https://github.com/4t145/hot-sauce"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["sync", "multi-thread", "hot-reload"]
description = "A lib for shared hot-reloadable data."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = ["serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
